# p2panda-gobject

./: Cargo.toml  README.md  meson.build  meson_options.txt
.github/workflows/: pages.yml
build-aux/: crates-version.py  dist-vendor.sh  generate-news.py  publish-crates-io.py
libp2panda/: Cargo.toml  build.rs  meson.build
libp2panda/doc/: libp2panda.toml  urlmap.js
libp2panda/include/: .p2panda.h.swo  p2panda.h
libp2panda/src/: error.rs  identity.rs  lib.rs  node.rs  topic.rs  utils.rs
p2panda-gobject/: Cargo.toml
p2panda-gobject/src/: boxed.rs  error.rs  identity.rs  lib.rs  node.rs  stream_handle.rs  topic.rs
tests/: libp2panda.py
